# gt4sd-core

./: .clabot  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conda.yml  conda_cpu_linux.yml  conda_cpu_mac.yml  conda_gpu.yml  cpu_requirements.txt  dev_requirements.txt  extras_requirements.txt  genindex.html  gpu_requirements.txt  iCLA.md  index.html  mit.tmpl  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  vcs_requirements.txt
.github/: conda_ci.yml  requirements_ci.txt
.github/ISSUE_TEMPLATE/: bug_report.md  cla-signature.md  cla-signature.yaml  feature_request.md
.github/workflows/: cla-signature.yaml  docs.yaml  pypi.yaml  tests.yaml
_downloads/2f7414fd7d3ad50971c04d4186a3e860/: gt4sd_inference_usage_md.md
_modules/: collections.html  dataclasses.html  enum.html  index.html  inspect.html  types.html
_modules/gt4sd/: configuration.html  conftest.html  exceptions.html  properties.html  s3.html  training_pipelines.html
_sources/: index.md.txt
_sources/api/: gt4sd.algorithms.conditional_generation.guacamol.core.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.graph_ga.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.graph_mcts.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_aae.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_organ.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_vae.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.rst.txt  gt4sd.algorithms.conditional_generation.guacamol.implementation.smiles_ga.rst.txt  (+244 more)
api/: gt4sd.algorithms.conditional_generation.guacamol.core.html  gt4sd.algorithms.conditional_generation.guacamol.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.graph_ga.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.graph_mcts.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_aae.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_organ.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.moses_vae.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.smiles_ga.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.smiles_lstm_hc.html  gt4sd.algorithms.conditional_generation.guacamol.implementation.smiles_lstm_ppo.html  gt4sd.algorithms.conditional_generation.html  gt4sd.algorithms.conditional_generation.key_bert.core.html  gt4sd.algorithms.conditional_generation.key_bert.html  gt4sd.algorithms.conditional_generation.key_bert.implementation.html  gt4sd.algorithms.conditional_generation.molgx.core.html  gt4sd.algorithms.conditional_generation.molgx.html  gt4sd.algorithms.conditional_generation.molgx.implementation.html  gt4sd.algorithms.conditional_generation.paccmann_rl.core.html  gt4sd.algorithms.conditional_generation.paccmann_rl.html  gt4sd.algorithms.conditional_generation.paccmann_rl.implementation.html  gt4sd.algorithms.conditional_generation.regression_transformer.core.html  gt4sd.algorithms.conditional_generation.regression_transformer.html  gt4sd.algorithms.conditional_generation.regression_transformer.implementation.html  gt4sd.algorithms.conditional_generation.regression_transformer.utils.html  gt4sd.algorithms.conditional_generation.reinvent.core.html  gt4sd.algorithms.conditional_generation.reinvent.html  gt4sd.algorithms.conditional_generation.reinvent.implementation.html  gt4sd.algorithms.conditional_generation.reinvent.reinvent_core.core.html  gt4sd.algorithms.conditional_generation.reinvent.reinvent_core.html  gt4sd.algorithms.conditional_generation.template.core.html  gt4sd.algorithms.conditional_generation.template.html  gt4sd.algorithms.conditional_generation.template.implementation.html  gt4sd.algorithms.conditional_generation.tests.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.core.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.implementation.core.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.implementation.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.implementation.nccr.core.html  gt4sd.algorithms.controlled_sampling.advanced_manufacturing.implementation.nccr.html  (+212 more)
docs/: Makefile  app.py  conf.py  index.md  requirements.txt
docs/_templates/: package.rst
examples/: README.md
notebooks/: README.md  cgcnn-demo.ipynb  diffusion-demo.ipynb  discovery-demo.ipynb  explore-molecular-generative-models-latent-spaces.ipynb  explore-pgt.ipynb  gt4sd-and-rxn-demo.ipynb  gt4sd-molgx-example.ipynb  gt4sd_molgx_example.ipynb  isgc2022-demo.ipynb  molformer-demo.ipynb  regression-transformer-demo.ipynb  requirements.txt  visum-2022-handson-generative-models.ipynb  visum_handson_generative_models.ipynb
source/: gt4sd_algorithm_addition_md.html  gt4sd_gfn_usage_md.html  gt4sd_inference_usage_md.html  gt4sd_server_upload_md.html
src/gt4sd/frameworks/molgx/: AUTHORS  DataBox.py  FeatureExtraction.py  Generation.py  LICENSE  MANIFEST.in  Molecule.py  README.md  Utility.py  __init__.py  molgxsdk.py  requirements.txt  setup.cfg
src/gt4sd/frameworks/molgx/ChemGenerator/: ChemGraphLabeling.py  ChemGraphResource.py  ChemGraphUtil.py  ChemRingGen.py
src/gt4sd/frameworks/molgx/docs/: Makefile  conf.py  index.rst  intro.rst  make.bat  reference.rst  release.rst  tutorial.rst
src/gt4sd/frameworks/molgx/example/jupyter_notebook/: gt4sd_molgx_example.ipynb
src/gt4sd/frameworks/molgx/example/sample_data/: QM9_partial_500.csv  QM9_sample.csv
src/gt4sd/frameworks/molgx/src/molgx/: FeatureEstimation.py  Prediction.py
src/gt4sd/frameworks/molgx/src/molgx/ChemGenerator/: ChemGraph.py  ChemGraphFragment.py  ChemGraphGen.py  ChemGraphGenPath.py  __init__.py
src/gt4sd/frameworks/molgx/src/molgx/config/: default_rings.csv
(+512 files in other folders)
