[metadata]
name = gt4sd
version = attr: gt4sd.__version__
description = Generative Toolkit for Scientific Discovery (GT4SD).
author= GT4SD team
long_description_content_type=text/markdown
long_description = file: README.md
keywords = GT4SD Generative Models Inference Training
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    minio
    numpy
    torch
    torchmetrics
    typing_extensions
    pydantic
    tape-proteins
    scikit-learn
    scikit-optimize
    pytorch_lightning
    regex
    transformers
    sentencepiece
    datasets
    keybert
    reinvent-chemistry
    tensorboard
    rdkit-pypi
setup_requires =
    setuptools
package_dir =
    = src
packages=find_namespace:
include_package_data = True

[options.entry_points]
console_scripts=
    gt4sd-trainer = gt4sd.cli.trainer:main
    gt4sd-inference = gt4sd.cli.inference:main
    gt4sd-saving = gt4sd.cli.saving:main
    gt4sd-pl-to-hf = gt4sd.cli.pl_to_hf_converter:main
    gt4sd-hf-to-st = gt4sd.cli.hf_to_st_converter:main

[options.packages.find]
where = src

[options.package_data]
gt4sd =
    py.typed
    training_pipelines/*json
    training_pipelines/tests/*json
    training_pipelines/tests/*smi

[options.extras_require]
extras =
    cogmol-inference
    AMD-Analytics

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
check_untyped_defs = True
plugins = pydantic.mypy

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-minio.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-paccmann_chemistry.*]
ignore_missing_imports = True

[mypy-paccmann_omics.*]
ignore_missing_imports = True

[mypy-pytoda.*]
ignore_missing_imports = True

[mypy-tape.*]
ignore_missing_imports = True

[mypy-skopt.*]
ignore_missing_imports = True

[mypy-regex.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-keybert.*]
ignore_missing_imports = True

[mypy-sentence_transformers.*]
ignore_missing_imports = True

[mypy-cog.*]
ignore_missing_imports = True

[mypy-pag.*]
ignore_missing_imports = True

[mypy-reinvent_chemistry.*]
ignore_missing_imports = True

[mypy-reinvent_models.*]
ignore_missing_imports = True

[mypy-guacamol_baselines.*]
ignore_missing_imports = True

[mypy-AMD_Analytics.*]
ignore_missing_imports = True

[mypy-paccmann_predictor.*]
ignore_missing_imports = True

[mypy-paccmann_gp.*]
ignore_missing_imports = True

[mypy-selfies.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-terminator.*]
ignore_missing_imports = True

[mypy-torchdrug.*]
ignore_missing_imports = True

[mypy-sentencepiece.*]
ignore_missing_imports = True
