[metadata]
name = gt4sd-rt-minimal
version = attr: gt4sd.__version__
description = Generative Toolkit for Scientific Discovery (GT4SD).
author= GT4SD team
long_description_content_type=text/markdown
long_description = file: README.md
keywords = GT4SD Generative Models Inference Training
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    importlib_metadata
    importlib_resources
    joblib
    minio
    numpy
    pydantic
    rdkit
    regex
    scikit-learn
    scipy
    sentence_transformers
    sentencepiece
    torch
    torchmetrics
    torchvision
    transformers
setup_requires =
    setuptools
package_dir =
    = src
packages = find_namespace:


[options.entry_points]
console_scripts=
    gt4sd-trainer = gt4sd.cli.trainer:main
    gt4sd-inference = gt4sd.cli.inference:main
    gt4sd-saving = gt4sd.cli.saving:main
    gt4sd-upload = gt4sd.cli.upload:main
    gt4sd-hf-to-st = gt4sd.cli.hf_to_st_converter:main

[options.packages.find]
where = src

[options.package_data]
gt4sd =
    py.typed

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
check_untyped_defs = True
plugins = pydantic.mypy

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-minio.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-pytoda.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-regex.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sentence_transformers.*]
ignore_missing_imports = True

[mypy-sentencepiece.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-terminator.*]
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

# to avoid mypy from crashing (https://github.com/python/mypy/issues/11045)
[mypy-transformers.trainer]
check_untyped_defs = False
