[metadata]
name = gt4sd
version = attr: gt4sd.__version__
description = Generative Toolkit for Scientific Discovery (GT4SD).
author= GT4SD team
long_description_content_type=text/markdown
long_description = file: README.md
keywords = GT4SD Generative Models Inference Training
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
install_requires =
    accelerate
    datasets
    diffusers
    importlib_metadata
    importlib_resources
    ipaddress
    joblib
    gt4sd-molformer
    gt4sd-trainer-hf-pl
    keras
    keybert
    minio
    modlamp
    molecule_generation
    molgx
    nglview
    numpy
    pytorch_lightning
    pyarrow
    pydantic
    pymatgen
    pyTDC!=0.3.8
    pyyaml
    rdkit
    regex
    reinvent-chemistry
    sacremoses
    scikit-learn
    scikit-optimize
    scipy
    sentencepiece
    sympy
    tables
    tape-proteins
    tensorboard
    tensorflow
    torch
    torchdrug
    torchmetrics
    torchvision
    transformers<4.26.0
    typing_extensions
    wheel
    xgboost
setup_requires =
    setuptools
package_dir =
    = src
packages = find_namespace:


[options.entry_points]
console_scripts=
    gt4sd-trainer = gt4sd.cli.trainer:main
    gt4sd-inference = gt4sd.cli.inference:main
    gt4sd-saving = gt4sd.cli.saving:main
    gt4sd-upload = gt4sd.cli.upload:main
    gt4sd-hf-to-st = gt4sd.cli.hf_to_st_converter:main

[options.packages.find]
where = src

[options.package_data]
gt4sd =
    py.typed
    algorithms/generation/tests/*pkl
    training_pipelines/*json
    training_pipelines/tests/*json
    training_pipelines/tests/*smi
    frameworks/crystals_rfc/*.csv

[options.extras_require]
extras =
    cogmol-inference

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503

[mypy]
check_untyped_defs = True
plugins = pydantic.mypy
exclude = ^src/gt4sd/frameworks/gflownet/envs

[mypy-gt4sd.frameworks.gflownet.envs.*]
follow_imports = skip

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-rdkit-stubs.*]
ignore_errors = True

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-minio.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-paccmann_chemistry.*]
ignore_missing_imports = True

[mypy-paccmann_omics.*]
ignore_missing_imports = True

[mypy-paccmann_generator.*]
ignore_missing_imports = True

[mypy-pytoda.*]
ignore_missing_imports = True

[mypy-tape.*]
ignore_missing_imports = True

[mypy-skopt.*]
ignore_missing_imports = True

[mypy-regex.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

[mypy-transformers.trainer]
check_untyped_defs = False

[mypy-torch.*]
ignore_missing_imports = True

[mypy-keybert.*]
ignore_missing_imports = True

[mypy-sentence_transformers.*]
ignore_missing_imports = True

[mypy-cog.*]
ignore_missing_imports = True

[mypy-pag.*]
ignore_missing_imports = True

[mypy-reinvent_chemistry.*]
ignore_missing_imports = True

[mypy-reinvent_models.*]
ignore_missing_imports = True

[mypy-guacamol_baselines.*]
ignore_missing_imports = True

[mypy-moses.*]
ignore_missing_imports = True

[mypy-molgx.*]
ignore_missing_imports = True

[mypy-paccmann_predictor.*]
ignore_missing_imports = True

[mypy-paccmann_gp.*]
ignore_missing_imports = True

[mypy-selfies.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-terminator.*]
ignore_missing_imports = True

[mypy-torchdrug.*]
ignore_missing_imports = True

[mypy-sentencepiece.*]
ignore_missing_imports = True

[mypy-molecule_generation.*]
ignore_missing_imports = True

[mypy-tdc.*]
ignore_missing_imports = True

[mypy-modlamp.*]
ignore_missing_imports = True

[mypy-diffusers.*]
ignore_missing_imports = True

[mypy-accelerate.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-torchvision.*]
ignore_missing_imports = True

[mypy-PIL.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-torch_geometric.*]
ignore_missing_imports = True

[mypy-torch_scatter.*]
ignore_missing_imports = True

[mypy-torch_sparse.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-sympy.*]
ignore_missing_imports = True

[mypy-openbabel.*]
ignore_missing_imports = True

[mypy-pyscreener.*]
ignore_missing_imports = True

[mypy-pdbfixer.*]
ignore_missing_imports = True

[mypy-packaging.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-pyparsing.*]
ignore_missing_imports = True

[mypy-nglview.*]
ignore_missing_imports = True

[mypy-pymatgen.*]
ignore_missing_imports = True

[mypy-datasets.*]
ignore_missing_imports = True

[mypy-yaml.*]
ignore_missing_imports = True

[mypy-gt4sd_molformer.*]
ignore_missing_imports = True

[mypy-gt4sd_trainer.hf_pl.*]
ignore_missing_imports = True

[mypy-tensorflow.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-xgboost.*]
ignore_missing_imports = True

[mypy-pydantic_settings.*]
ignore_missing_imports = True